--- a/css/style.css
+++ b/css/style.css
@@ -125,8 +125,8 @@ h1, h2,h3 {
    height: 1px;
    background-color: white;
    position: absolute;
-   bottom:-24px;
-   left: 178px;
+   bottom:-25px;
+   left: 175px;
    z-index: 1;
 } 
 .reasons>li.illustrated-right>h3::before {
@@ -177,6 +177,7 @@ li.reason>p {
 }
 li.reason>h3::before {
    margin-bottom:-2px;
+   background-color: #686868;
 }
 li.reason>p::before {
    background-color:#eeeeee;
@@ -254,31 +255,35 @@ li.reason>p::before {
    padding-top: 163px;
    width: 33.3333%;
    color: black;
-    padding-right: 0;
-    
+   padding-right: 0;    
  }
 .icon:last-child{
     margin-right: 0;    
 }
-icon h3 {
+.icon h3 {
     color:#171717;
     font-size: 21px;
     line-height: 21px;
     font-weight: bold;
+    width:100%; 
+    padding-left:40px; 
+    padding-right:40px; 
+    box-sizing:border-box;
 }
-.icon p{
+.icons .icon p{
     font-size: 14px;
     line-height: 21px;
     color: #858585;
+    width:100%; 
+    padding-left:40px; 
+    padding-right:40px; 
+    box-sizing:border-box;
 }
 .accommodation {
     background-color :#ffffff;
     background-image: url(../img/accomodation.png);
     background-repeat: no-repeat;
     background-position: center 62px;
-
-   
-   
 }
 .food {
     background-color: #ffffff;
@@ -361,11 +366,11 @@ icon h3 {
     animation: bounce 0.6s;
 }
 .booking-form {
-    
+    position:relative;
     padding:  56px 50px;
 }
 .booking-form input{ 
-    padding: 14px 16px;
+    padding:12px 2px 12px 16px;
     background-color: #f2f2f2;
     font-size: 14px;    
     font-family:"PT Sans", Arial, serif;
@@ -376,7 +381,6 @@ icon h3 {
 .booking-form label {
     font-weight: bold;
     font-size: 14px;
-    
     margin-top: 10px;
     float: left;
 }
@@ -388,18 +392,20 @@ icon h3 {
     clear: right;
 }
 
-.booking-form .counter_label { /*не вставляется значение label и я не знаю, как передвинуть - дети? пробовала через nth-child - но он не работает*/
-    float: left;    
+.booking-form .counter_label[for="child"] {
+    margin-left:18px; 
 }
 
-.booking-form .calendar::after {
-  
+
+input.calendar + label::after {
    display: block;
    content: "\e800";   
    font-family: "symbols-sedona";
    font-size: 19px;
-   text-align: right;
    color: #c2c2c2;
+   position:absolute; 
+   right:61px; 
+   margin-top:-28px; 
 }
 
 .booking-form .counter {
@@ -408,7 +414,7 @@ icon h3 {
     margin: 0;
     background-color: #f2f2f2;
     margin-bottom: 55px;
-    margin-left: 45px;
+    margin-left: 40px;
     padding: 0;
 }
 
@@ -416,9 +422,8 @@ icon h3 {
   clear:both; 
 }
 
-/* в критериях есть требование - не больше 3 элементов в селекторах */
-.booking-form .counter input, .counter .minus, .counter .plus {
-    width: 40px;
+.counter input, .counter .minus, .counter .plus {
+    width: 42px;
     display: inline-block;
 }
 .counter .minus::before {
@@ -446,9 +451,8 @@ icon h3 {
 }
 .booking-form .btn{
     color: white;
-    width: 450px;
-    padding:  17px 195px;
-   
+    padding:  17px 0;
+    width:100%;
     font-size: 21px;
     background-color: #81b3d2;
     border: none;
@@ -464,7 +468,7 @@ icon h3 {
 }
 /* Всплывающая форма */
 
-/*@keyframes bounce {
+/* @keyframes bounce {
   0%   {
     transform: translateY(-2000px);
   }
@@ -477,10 +481,10 @@ icon h3 {
   100% {
     transform: translateY(0);
   }
+} */
  .social-btn .hidden {
      display: none;
 }
-*/
 
 
 .sorting {
@@ -806,7 +810,7 @@ icon h3 {
     
 }
 .hotel-name:hover {  
-    color: #81b3d2";
+    color: #81b3d2;
 }
 .hotel-name:active {  
     color: #b2b2b2;
@@ -872,7 +876,7 @@ icon h3 {
     vertical-align: top;
     width: 46px;
     height: 48px;
-    
+    padding-bottom: 35px;
     position: relative;
     font-size: 0;
     color: #ffffff;
@@ -896,7 +900,7 @@ icon h3 {
 }
 
 .footer-copyright:active img{
-    background-color: #bdbbbc"; 
+    background-color: #bdbbbc; 
 }
 
 
