--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ h1, h2,h3 {
 .main {   
     background: url(../img/background_main.jpg) no-repeat;
     background-size: 100%;
-   height: 512px;     
+   height: 512px; 
+    position:relative;
 }
 .main-navigation ul{
     margin: 0;
@@ -86,6 +87,9 @@ h1, h2,h3 {
     color:#000000; 
     text-decoration: none;
   }
+.main:before, .main:after, .main li:first-child:before, .main li:last-child:before { background-color: white; content:''; height:92px; position:absolute; bottom:-46px; width:30%; } .main:before { transform: skewY(14deg); } .main:after { right:20%; transform: skewY(-14deg); } .main li:first-child:before { left:20%; transform: skewY(14deg); } .main li:last-child:before { right:0; transform: skewY(-14deg); }
+
+
 .content {
     margin-top: 60px;
     margin-bottom: 35px;
@@ -96,6 +100,8 @@ h1, h2,h3 {
     font-size: 21px;
     line-height: 26px;
     font-weight: bold;
+    position:relative; 
+    z-index:1;
 }
 .title {
     margin-right: auto;
@@ -105,6 +111,8 @@ h1, h2,h3 {
     color: #5c5c5c;
     line-height: 26px;
     margin-bottom: 60px;
+    position:relative; 
+    z-index:1;
 }
 
 .reasons {
